--- a/ui/style.css
+++ b/ui/style.css
@@ -1,7 +1,13 @@
 body {
      font-family: sans-serif;
      background-color: lightgrey;
-     margin-top: 75px;
+     background-color
+     padding-top:30px;
+     padding-bottom: 69px;
+     padding-left: 30px;
+     padding-right: 30px;
+     margin-top: 220px;
+     margin-bottom: 119px;
  }
  
  .center {
