--- a/ui/style.css
+++ b/ui/style.css
@@ -1,9 +1,8 @@
 body {
      font-family: sans-serif;
      background-color: lightgrey;
-     margin-top: 220px;
+     margin-top: 220px solid #000;
      margin-bottom: 119px;
-     border-top: 5px solid #000;
      padding-top:30px;
      padding-bottom: 69px;
      padding-left: 30px;
