--- a/ui/style.css
+++ b/ui/style.css
@@ -1,7 +1,7 @@
 body {
      font-family: sans-serif;
      background-color: lightgrey;
-     margin-top: 220px;
+     margin-top: 220px #000;
      margin-bottom: 119px;
      padding-top:30px;
      padding-bottom: 69px;
