--- a/ui/style.css
+++ b/ui/style.css
@@ -1,9 +1,9 @@
 body {
      font-family: sans-serif;
      background-color: lightgrey;
-     margin-top: 220px #000;
+     margin-top: 220px ;
      margin-bottom: 119px;
-     padding-top:30px;
+     padding-top:30px #000;
      padding-bottom: 69px;
      padding-left: 30px;
      padding-right: 30px;
