--- a/ui/style.css
+++ b/ui/style.css
@@ -3,7 +3,7 @@ body {
      background-color: lightgrey;
      margin-top: 220px ;
      margin-bottom: 119px;
-     padding-top:30px #000;
+     padding-top:30px solid #000;
      padding-bottom: 69px;
      padding-left: 30px;
      padding-right: 30px;
