[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -1,7 +1,7 @@
 body {
      font-family: sans-serif;
      background-color: lightgrey;
-     margin-top: 220px ;
+     margin-top:auto;
      margin-bottom: 119px;
      padding-top:30px solid #000;
      padding-bottom: 69px;
