--- a/ui/about.css
+++ b/ui/about.css
@@ -1,3 +1,15 @@
+body {
+     font-family: sans-serif;
+     background-color: lightgrey;
+     margin-top:50px;
+     margin-bottom: 119px;
+     padding-top:30px solid #000;
+     padding-bottom: 69px;
+     padding-left: 30px;
+     padding-right: 30px;
+
+ }
+ 
 h1 { color: #CEF0D4; font-family: 'Rouge Script', cursive; font-size: 130px; font-weight: normal; line-height: 48px; margin: 0 0 50px; text-align: center; text-shadow: 1px 1px 2px #082b34; }
 
 
