--- a/ui/about.css
+++ b/ui/about.css
@@ -1,6 +1,6 @@
 body {
      font-family: sans-serif;
-     background-color: lightgrey;
+     background-color: blue;
      margin-top:50px;
      margin-bottom: 119px;
      padding-top:30px solid #000;
