--- a/ui/about.css
+++ b/ui/about.css
@@ -9,6 +9,10 @@ body {
 
  }
  
+ .img-medium {
+     height: 200px;
+ }
+ 
 h1 { color: #fff; font-family: 'Righteous', cursive; font-size: 65px; font-weight: normal; line-height: 60px; margin: 10px 0 20px; text-transform: uppercase; text-shadow: 2px 2px 0 #000, margin: 10px 0 24px; text-align: center; }
 
 
