--- a/ui/about.css
+++ b/ui/about.css
@@ -9,6 +9,11 @@ body {
 
  }
  
+  div, img { position:absolute; top:0; left:0; width:250px; height:250px; }
+    img {
+      -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))
+    }
+ 
  .img-medium {
      height: 200px;
  }
