--- a/ui/style.css
+++ b/ui/style.css
@@ -1,13 +1,11 @@
 body {
 
-     background: rgba(193,191,234,1);
-background: -moz-linear-gradient(top, rgba(193,191,234,1) 0%, rgba(206,199,236,1) 49%, rgba(216,208,239,1) 68%, rgba(235,233,249,1) 100%);
-background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(193,191,234,1)), color-stop(49%, rgba(206,199,236,1)), color-stop(68%, rgba(216,208,239,1)), color-stop(100%, rgba(235,233,249,1)));
-background: -webkit-linear-gradient(top, rgba(193,191,234,1) 0%, rgba(206,199,236,1) 49%, rgba(216,208,239,1) 68%, rgba(235,233,249,1) 100%);
-background: -o-linear-gradient(top, rgba(193,191,234,1) 0%, rgba(206,199,236,1) 49%, rgba(216,208,239,1) 68%, rgba(235,233,249,1) 100%);
-background: -ms-linear-gradient(top, rgba(193,191,234,1) 0%, rgba(206,199,236,1) 49%, rgba(216,208,239,1) 68%, rgba(235,233,249,1) 100%);
-background: linear-gradient(to bottom, rgba(193,191,234,1) 0%, rgba(206,199,236,1) 49%, rgba(216,208,239,1) 68%, rgba(235,233,249,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c1bfea', endColorstr='#ebe9f9', GradientType=0 );
+
+
+background: #808080; /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #808080 , #3fada8); /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #808080 , #3fada8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        
      margin-top:50px;
      margin-bottom: 119px;
      padding-top:30px solid #000;
