--- a/ui/style.css
+++ b/ui/style.css
@@ -61,7 +61,7 @@ li a:hover:not(.active) {
   padding: 0.75em 0.75em;
   background: #000;
   position: relative;
-  top: 490px;
+  top: 300px;
   border-top: 1px solid #000;
 }
  
@@ -69,7 +69,9 @@ li a:hover:not(.active) {
 
 
 p { color: #7a7c7f; font-size: 29px; font-family: "Libre Baskerville", serif; line-height: 45px; text-align: center; text-shadow: 0 1px 1px #fff; padding-top: 20px; }
-
+a { color: white; font-size:10px; 
+    
+}
 
 p.byline { font-style: italic; color: #B6B6B6; font-size: 24px; margin-top: 20px; text-align: center; text-shadow: 0 1px 1px #fff; }
 
