--- a/ui/style.css
+++ b/ui/style.css
@@ -2,7 +2,7 @@ body {
      
      margin-top:50px;
      margin-bottom: 119px;
-     padding-top:30px solid #000;
+     padding-top:30px ;
      padding-bottom: 69px;
      padding-left: 30px;
      padding-right: 30px;
